about me component included, initial work on heading css

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,4 @@
   </div>
 </div>
 <app-navigation></app-navigation>
-<div>
-    <i class="far fa-smile-beam"></i>
-</div>
+<app-about-me></app-about-me>
