--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,6 +1,6 @@
 <div class="nav-bar">
   <div class="nav-icon-container">
-      <div class="nav-icon">
+      <div class="nav-icon" routerLink="/about-me" routerLinkActive="active">
           <fa-icon [icon]="faSmileBeam"></fa-icon>
       </div>    
   </div>
