--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -3,14 +3,17 @@
 }
 
 .nav-icon-container{
-    padding: 50px;
+    padding-right: 5%;
+    padding-left: 5%;
+    padding-top: 1%;
+    padding-bottom: 1%;
     display: inline-block;
 }
 
 .nav-icon{
     color: white;
     background-color: salmon;
-    padding: 20px;
+    padding: 25px;
     border-radius: 50%;
-    font-size: 1rem;
+    font-size: 1.2rem;
 }
